--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -5,10 +5,11 @@
               android:layout_height="fill_parent"
     >
 
-    <TextView
+    <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World, MyActivity"
+        android:text="Test"
+        android:onClick="test"
         />
 </LinearLayout>
 
