--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,12 +4,25 @@
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
     >
-
-    <Button
+    <LinearLayout
         android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+    <EditText
+        android:id="@+id/et_search_text"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Test"
+        android:layout_weight="0.8"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Поиск"
+        android:layout_weight="0.2"
         android:onClick="test"
         />
+    </LinearLayout>
+    <ListView
+        android:id="@+id/lv_vacancies"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"/>
 </LinearLayout>
 
