--- a/res/layout/fragment_vacancy_listview.xml
+++ b/res/layout/fragment_vacancy_listview.xml
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
-              android:layout_width="fill_parent"
-              android:layout_height="fill_parent"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
     >
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
     <EditText
         android:id="@+id/et_search_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="android"
         android:layout_weight="0.8"/>
     <Button
+        android:id="@+id/btn_search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Поиск"
         android:layout_weight="0.2"
-        android:onClick="test"
         />
     </LinearLayout>
     <ListView
         android:id="@+id/lv_vacancies"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </LinearLayout>
 
