--- a/res/layout/fragment_vacancy_listview.xml
+++ b/res/layout/fragment_vacancy_listview.xml
@@ -4,26 +4,50 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
     >
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <EditText
-        android:id="@+id/et_search_text"
+
+    <FrameLayout
+        android:id="@+id/vacancies_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="android"
-        android:layout_weight="0.8"/>
-    <Button
-        android:id="@+id/btn_search"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Поиск"
-        android:layout_weight="0.2"
-        />
-    </LinearLayout>
-    <ListView
-        android:id="@+id/lv_vacancies"
+        android:visibility="gone">
+
+        <!--
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/et_search_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="android"
+                android:layout_weight="0.8"/>
+
+            <Button
+                android:id="@+id/btn_search"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Поиск"
+                android:layout_weight="0.2"
+                />
+        </LinearLayout>
+          -->
+        <ListView
+            android:id="@+id/lv_vacancies"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/progressbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+
+        <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"/>
+    </FrameLayout>
 </LinearLayout>
 
