Add detailed activity

--- a/res/layout/fragment_vacancy_listview.xml
+++ b/res/layout/fragment_vacancy_listview.xml
@@ -5,11 +5,12 @@
               android:layout_height="match_parent"
     >
 
-    <FrameLayout
+    <LinearLayout
         android:id="@+id/vacancies_content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone">
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="visible">
 
         <!--
         <LinearLayout
@@ -35,8 +36,12 @@
         <ListView
             android:id="@+id/lv_vacancies"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </FrameLayout>
+            android:layout_height="wrap_content"/>
+        <ProgressBar
+            android:layout_gravity="center_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
 
     <FrameLayout
         android:id="@+id/progressbar"
@@ -48,5 +53,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"/>
     </FrameLayout>
+
 </LinearLayout>
 
