--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_height="wrap_content"
@@ -17,13 +18,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
-        <EditText
+
+        <AutoCompleteTextView
             android:id="@+id/et_vacancy_region_search"
             android:hint="@string/vacancy_region_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"/>
-        </LinearLayout>
+    </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -34,6 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#ff404040"
+            android:textSize="20sp"
             android:textColor="@android:color/white"
             android:onClick="findVacancies"/>
     </LinearLayout>
